--- a/chinalife/src/main/webapp/res/css/clndr.css
+++ b/chinalife/src/main/webapp/res/css/clndr.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
+@import "google-font.css"
 .clearfix:after {
   content: ".";
   display: block;
